--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".changelanguage.ChangeLanguageActivity"
+            android:screenOrientation="portrait"/>
         <activity android:name=".activities.PlayerActivity"></activity>
 
         <service
