--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
@@ -43,6 +46,8 @@ dependencies {
     compile 'com.github.aakira:expandable-layout:1.6.0@aar'
     compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
     compile 'com.github.iammert:InteractivePlayerView:f4f6490290'
+    compile 'com.android.volley:volley:1.0.0'
     compile 'org.jsoup:jsoup:1.10.2'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
     testCompile 'junit:junit:4.12'
 }
