--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,33 +3,39 @@
     package="com.example.tiennguyen.luanvannew">
 
     <uses-permission android:name="android.permission.INTERNET" />
+
+    <permission android:name="android.permission.MEDIA_CONTENT_CONTROL" />
+
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
+        android:configChanges="locale"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:configChanges="locale">
+        android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
+        </activity>
+        <activity
+            android:name=".changelanguage.ChangeLanguageActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".activities.PlayerActivity" />
+
+        <service
+            android:name=".services.PlayerService"
+            android:exported="false"></service>
+
+        <activity android:name=".activities.BackgroundActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".changelanguage.ChangeLanguageActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".activities.PlayerActivity"></activity>
-
-        <service
-            android:name=".services.PlayerService"
-            android:exported="false">
-        </service>
     </application>
 
 </manifest>
